# AutomaticTuningOfSysParams

./: README  README.md  frameworkDesign.zargo
examples/: RegistrationExample1-test.spt.xml  RegistrationExample2-test.spt.xml
source/: CMakeLists.txt  run_mpijob.cxx  run_reg.cxx  sziAmoebaOptimizerDOMReader.h  sziBSplineDeformableTransformInitializer.h  sziBSplineDeformableTransformInitializer.hxx  sziBoundingBoxFinder.h  sziCommandInterface.h  sziDataDOMReader.cxx  sziDataDOMReader.h  sziDataSet.h  sziDataSetDOMReader.h  sziDataSetDOMReader.hxx  sziExampleRegistrater1.h  sziExampleRegistrater2.h  sziExecutable.h  sziExhaustiveOptimizerDOMReader.h  sziFancyLogger.h  sziImageDOMReader.h  sziImageToImageMetricDOMReader.h  sziInterpolatorDOMReader.h  sziLiverSegmentationSystem.h  sziLiverSegmentationSystemDOMReader.h  sziLogService.cxx  sziLogService.h  sziMPIContext.h  sziMPIJob.h  sziMPIJobData.h  sziMPIJobScheduler.h  sziMPIJobSchedulerDOMReader.h  sziMPISystemAgent.h  sziMPISystemParametersTunerContext.h  sziMPISystemParametersTunerDOMReader.h  sziMPISystemParametersTunerMaster.h  sziMPISystemParametersTunerSlave.h  sziMPIWorker.h  sziMPIWorkerDOMReader.cxx  sziMPIWorkerDOMReader.h  sziMPIWorkerLauncher.h  sziMetricDOMReader.h  (+24 more)
spie/manuscript/: rhgong_atosp-abstract.aux  rhgong_atosp-abstract.blg  rhgong_atosp-abstract.dvi  rhgong_atosp-abstract.tex  rhgong_atosp-full.tex  rhgong_atosp.aux  rhgong_atosp.bib  rhgong_atosp.blg
spie13/: results.eps  v1.7z
spie13/manuscript/: rhgong_atosp-full - Copy.tex  rhgong_atosp-full.aux  (+5 more)
tools/: CMakeLists.txt
(+30 files in other folders)
